--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('main.index') }}">ホーム</a>
+                        <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
                     </li>
                     
                     <li class="nav-item">
@@ -38,11 +38,11 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" aria-disabled="true">検索（準備中）</a>
+                        <a class="nav-link disabled" href="#" aria-disabled="true">Search (coming soon)</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" aria-disabled="true">ダッシュボード（準備中）</a>
+                        <a class="nav-link disabled" href="#" aria-disabled="true">Dashboard (coming soon)</a>
                     </li>
                 </ul>
             </div>
