--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,12 +17,13 @@
         <!-- message (about page) -->
         {% if message %}
         <div class="alert alert-primary" role="alert">
-            <h4 class="alert-heading">ようこそ！</h4>
+            <h4 class="alert-heading">Welcome!!</h4>
             <p>{{ message }}</p>
         </div>
         {% endif %}
 
         <!-- main content of home page -->
         {% if not page_title %}
+        {% endif %}
     </div>
 </div>
