--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{<% block content %>}
+{% block content %}
 <div class="row">
     <div class="col-md-8 mx-auto">
         <!-- page title -->
